--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,20 @@
   align-items: center;
   justify-content: space-between;
 }
+completeButton {
+  display:inline-block;
+ padding:0.3em 1.2em;
+ margin:0 0.3em 0.3em 0;
+ border-radius:2em;
+ box-sizing: border-box;
+ text-decoration:none;
+ font-family:'Roboto',sans-serif;
+ font-weight:300;
+ color:#FFFFFF;
+ background-color:#4eb5f1;
+ text-align:center;
+ transition: all 0.2s;
+}
+button:hover{
+ background-color:#4095c6;
+}
